# dpetools

./: .gitignore  README.md  pyproject.toml
.github/: checklist_gherkin_example_mapping_en.md  copilot-instructions.md  how_to_prompt_copilot_for_gherkin.md
docs/features/: fetch_dpe_records_with_parameters.feature  retrieve_public_dpe_records_from_ademe.feature
src/dpetools/: __init__.py  api_client.py  exceptions.py
src/dpetools/config/: container.py
tests/acceptance/: test_fetch_dpe_records_with_parameters.py  test_retrieve_public_dpe_records.py
tests/unit/: test_api_client.py
