[project]
name = "dpetools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pierre-Yves PAMART", email = "pypamart@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-bdd>=8.1.0",
    "ruff>=0.11.12",
]
