[project]
name = "dpetools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pierre-Yves PAMART", email = "pypamart@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-bdd>=8.1.0",
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
markers = [
    "happy: marks tests as happy path",
    "sad: marks tests as sad path",
    "wip: marks tests as work in progress"
]
