[project]
name = "dpetools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pierre-Yves PAMART", email = "pypamart@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pandas-stubs>=2.2.3.250527",
    "pytest>=8.3.5",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
    "types-requests>=2.32.0.20250515",
]

[tool.pytest.ini_options]
markers = [
    "happy: marks tests as happy path",
    "sad: marks tests as sad path",
    "edge: marks tests as edge cases",
    "wip: marks tests as work in progress"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pylint
    "PL",
]
ignore = [
    # pycodestyle
    "E501",  # line too long
    # "E203",  # whitespace before ':'
    # # Pyflakes
    # "F401",  # unused import
    # "F403",  # wildcard import
    # # flake8-bugbear
    "B007",  # use of assert in tests
]
